[project]
name = "nlip-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.75.5.post1",
    "fastapi>=0.116",
    "uvicorn>=0.35",
    "nlip-sdk",
]

[dependency-groups]
dev = []

[tool.uv.sources]
nlip-sdk = { path = "../nlip_sdk", editable = true }
